why isn't it working

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   <body>
-      <div id="btndiv">
+      <div id="gifdisplay"></div>
+      <div id="otherdiv"></div>
+      <form id="gif-form">
+          <label for="gif-input">Add a Topic</label>
+          <input type="text" id="gif-input"><br>
+          <input id="add-gif" type="submit" value="Add a Topic">
+      </form>
 
       </div>
       <br>
@@ -16,6 +22,6 @@
           </form>
       </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="assets/javascript/script.js"></script>
+  <script src="assets/javascript/test.js"></script>
   </body>
 </html>
